--- a/registry-secret.yaml
+++ b/registry-secret.yaml
@@ -15,4 +15,13 @@ spec:
   data:
   - secretKey: .dockerconfigjson
     remoteRef:
-      key: docker-registry-credentials    # Key in your external secret store 
+      key: docker-registry-credentials    # Key in your external secret store
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: registry-credentials
+  namespace: discord-bot
+type: kubernetes.io/dockerconfigjson
+stringData:
+  .dockerconfigjson: $registry-credentials    # Will be replaced by ArgoCD 
