--- a/secret.yaml
+++ b/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: discord-bot-secret
+  namespace: discord-bot
 type: Opaque
-data:
-  # The token will be managed through ArgoCD
-  token: ${DISCORD_BOT_TOKEN} 
+stringData:
+  token: $discord-bot-token    # Will be replaced by ArgoCD 
