--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -9,6 +9,12 @@ spec:
     repoURL: https://your-git-repo-url.git  # Replace with your git repo URL
     targetRevision: HEAD
     path: k8s  # Assuming all K8s manifests are in a k8s directory
+    helm:
+      parameters:
+        - name: discord-bot-token
+          value: $DISCORD_BOT_TOKEN
+        - name: registry-credentials
+          value: $REGISTRY_CREDENTIALS
   destination:
     server: https://kubernetes.default.svc
     namespace: discord-bot
