--- a/kustomization/registry-secret.yaml
+++ b/kustomization/registry-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: registry-credentials
-  namespace: discord-bot
+  namespace: max-bot
 spec:
   refreshInterval: "15m"
   secretStoreRef:
@@ -16,12 +16,3 @@ spec:
   - secretKey: .dockerconfigjson
     remoteRef:
       key: docker-registry-credentials    # Key in your external secret store
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: registry-credentials
-  namespace: discord-bot
-type: kubernetes.io/dockerconfigjson
-stringData:
-  .dockerconfigjson: $registry-credentials    # Will be replaced by ArgoCD 
