--- a/kustomization/secret.yaml
+++ b/kustomization/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: discord-bot-secret
-  namespace: discord-bot
+  namespace: max-bot
 type: Opaque
 stringData:
   token: $discord-bot-token    # Will be replaced by ArgoCD 
