--- a/kustomization/kustomization.yaml
+++ b/kustomization/kustomization.yaml
@@ -11,5 +11,5 @@ resources:
 
 images:
   - name: discord-music-bot
-    newName: registry.mentalsj.uk/discord-music-bot  # Replace with your registry URL
-    newTag: latest 
+    newName: registry.mentalsj.uk/discord-music-bot
+    newTag: latest
