--- a/kustomization-2/application.yaml
+++ b/kustomization-2/application.yaml
@@ -12,6 +12,15 @@ spec:
     kustomize:
       images:
         - registry.mentalsj.uk/discord-music-bot:latest
+      parameters:
+        - name: DISCORD_TOKEN
+          value: $DISCORD_TOKEN
+        - name: REGISTRY_USERNAME
+          value: $REGISTRY_USERNAME
+        - name: REGISTRY_PASSWORD
+          value: $REGISTRY_PASSWORD
+        - name: REGISTRY_AUTH
+          value: $REGISTRY_AUTH
   destination:
     server: https://kubernetes.default.svc
     namespace: discord-bot
