--- a/helm/application.yaml
+++ b/helm/application.yaml
@@ -8,23 +8,13 @@ spec:
   source:
     repoURL: https://your-git-repo-url.git
     targetRevision: HEAD
-    path: discord-music-bot/kustomization-2
+    path: discord-music-bot/helm
     helm:
       values: |
         discordToken: ""
         registry:
           username: ""
           password: ""
-      parameters:
-        - name: discordToken
-          value: ""
-        - name: registry.username
-          value: ""
-        - name: registry.password
-          value: ""
-    kustomize:
-      images:
-        - registry.mentalsj.uk/discord-music-bot:latest
   destination:
     server: https://kubernetes.default.svc
     namespace: discord-bot
