--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -18,7 +18,8 @@ stringData:
         "registry.mentalsj.uk": {
           "username": {{ .Values.registry.username | quote }},
           "password": {{ .Values.registry.password | quote }},
-          "auth": {{ printf "%s:%s" .Values.registry.username .Values.registry.password | b64enc | quote }}
+          "email": {{ .Values.registry.email | quote }},
+          "auth": {{ printf "%s:%s" .Values.registry.username .Values.registry.password .Values.registry.email | b64enc | quote }}
         }
       }
     } 
