--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -19,7 +19,7 @@ stringData:
           "username": {{ .Values.registry.username | quote }},
           "password": {{ .Values.registry.password | quote }},
           "email": {{ .Values.registry.email | quote }},
-          "auth": {{ printf "%s:%s" .Values.registry.username .Values.registry.password .Values.registry.email | b64enc | quote }}
+          "auth": {{ printf "%s:%s" .Values.registry.username .Values.registry.password | b64enc | quote }}
         }
       }
     } 
