removed hardcoded values

--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -15,7 +15,7 @@ stringData:
   .dockerconfigjson: |
     {
       "auths": {
-        "registry.mentalsj.uk": {
+        "{{ .Values.registry.server }}": {
           "username": {{ .Values.registry.username | quote }},
           "password": {{ .Values.registry.password | quote }},
           "email": {{ .Values.registry.email | quote }},
