--- a/helm/application.yaml
+++ b/helm/application.yaml
@@ -13,6 +13,7 @@ spec:
       values: |
         discordToken: ""
         registry:
+          server: ""
           username: ""
           password: ""
           email: ""
