--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set lowercase owner name
+        run: |
+          echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -28,6 +32,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner | lower }}/discord-music-bot:latest
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner | lower }}/discord-music-bot:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner | lower }}/discord-music-bot:buildcache,mode=max 
+          tags: ghcr.io/${{ env.OWNER_LC }}/discord-music-bot:latest
+          cache-from: type=registry,ref=ghcr.io/${{ env.OWNER_LC }}/discord-music-bot:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ env.OWNER_LC }}/discord-music-bot:buildcache,mode=max 
