--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -13,10 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set lowercase owner name
-        run: |
-          echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -29,9 +25,14 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v5
+        env:
+          REPO_NAME: ${{ github.repository }}
+          REPO_NAME_LOWER: ${{ github.repository | toLower }}
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ env.OWNER_LC }}/discord-music-bot:latest
-          cache-from: type=registry,ref=ghcr.io/${{ env.OWNER_LC }}/discord-music-bot:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ env.OWNER_LC }}/discord-music-bot:buildcache,mode=max 
+          tags: ghcr.io/${{ env.REPO_NAME_LOWER }}:latest
+          cache-from: type=registry,ref=ghcr.io/${{ env.REPO_NAME_LOWER }}:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ env.REPO_NAME_LOWER }}:buildcache,mode=max
+
+
