--- a/helm/application.yaml
+++ b/helm/application.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: discord-music-bot
   namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: discord-bot=ghcr.io/donkelbinger/discord-music-bot
+    argocd-image-updater.argoproj.io/discord-bot.update-strategy: newest-build
 spec:
   project: default
   source:
