--- a/helm/application.yaml
+++ b/helm/application.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd-image-updater.argoproj.io/image-list: discord-music-bot=ghcr.io/donkelbinger/discord-music-bot
-    argocd-image-updater.argoproj.io/discord-bot.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/discord-music-bot.update-strategy: newest-build
 spec:
   project: default
   source:
