--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         - name: {{ .Release.Name }}-registry-credentials
       containers:
       - name: discord-music-bot
-        image: "{{ .Values.image.repository }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         - name: DISCORD_TOKEN
