--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-discord-bot-secret
+  name: "{{ .Release.Name }}-discord-bot-secret"
 type: Opaque
 stringData:
   token: {{ .Values.discordToken }}
