--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-discord.py
-yt-dlp
-python-dotenv
-async-timeout
-PyNaCl==1.4.0 
+discord.py>=2.3.0
+yt-dlp>=2023.12.30
+python-dotenv>=1.0.0
+async-timeout>=4.0.0
+PyNaCl==1.5.0
+aiohttp>=3.9.0
