--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -4,4 +4,6 @@ metadata:
   name: "{{ .Release.Name }}-discord-bot-secret"
 type: Opaque
 stringData:
+
   token: {{.Values.discordToken }}
+  authed_guilds: {{.Values.authedGuilds }}
