--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,28 @@ image:
   tag: ""
   pullPolicy: Always
 
+# Discord Bot Configuration
 discordToken: ""
+authorizedGuildIds: ""
 
+# YouTube Configuration
+youtubeCookieFile: ""
+
+# Bot Behavior Configuration
+logLevel: "INFO"
+commandPrefix: "/"
+maxQueueSize: "50"
+userQueueLimit: "20"
+voiceTimeout: "300"
+audioQuality: "medium"
+
+# Queue Persistence Configuration
+queuePersistence:
+  enabled: "true"
+  file: "data/queue_state.json"
+  maxAgeHours: "24"
+  saveIntervalMinutes: "5"
+
+# Helm Chart Configuration
 nameOverride: ""
-fullnameOverride: "" 
+fullnameOverride: ""
